# ESP_PRJ_DETMASK

./: README.md  df
components/esp_system/include/: esp_system.h
doc/web/: 1.html  2.html  3.html  index.html
source/: CMakeLists.txt  sdkconfig  sdkconfig.old
source/main/: CMakeLists.txt  nt99141.c  ov3660.c  sccb.c  sensor.c  twi.c  uart_events_example_main.c  uart_events_example_main__.c  wiring.c  xclk.c
source/main/include/: camera_common.h  img_converters.h  nt99141.h  ov3660_settings.h  sccb.h  sensor.h  wiring.h
uart_events/: sdkconfig
uart_events/main/: camera.c
uart_events/main/include/: esp_camera.h  nt99141_regs.h  nt99141_settings.h  ov3660.h  ov3660_regs.h  twi.h  xclk.h
